--- a/index.html
+++ b/index.html
@@ -245,6 +245,18 @@
                                     <ul class='list-unstyled'>
                                         <li class='card card-nested clearfix'>
                                             <div class='content'>
+                                                <p class='clear-margin relative'><strong>Software Engineer | Intern</strong>&nbsp;
+                                                <a href='https://www.sumall.ai' target="_blank">Sumall</a></p>
+                                                <p class='text-muted'><small><span class='space-right'>August 2017 - Present</span><span><i class='fa fa-clock-o icon-left'></i>< 1 year</span></small></p>
+                                                <ul>
+                                                    <li>Develop new user-facing interface for <a href="https://www.sumall.ai">Sumall</a>.</li>
+                                                    <li>Create reusable code. Ensure technical feasibility of UI/UX designs.</li>
+                                                    <li>Optimize application for maximum speed and scalability. Assure all user input validated before submitting to backend. Collaborate with product & design team.</li>
+                                                </ul>
+                                            </div>
+                                        </li>
+                                        <li class='card card-nested clearfix'>
+                                            <div class='content'>
                                                 <p class='clear-margin relative'><strong>Web Developer | Data Analytic</strong>&nbsp;
                                                 <a href='#' target="_blank">Consultant</a></p>
                                                 <p class='text-muted'><small><span class='space-right'>Oct 2014 - Present</span><span><i class='fa fa-clock-o icon-left'></i>4 years</span></small></p>
