--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                             </div>
                             <div class='name-and-profession'>
                                 <h3 class='text-center text-bolder name' itemprop='name'>Angela Lo</h3>
-                                <h5 class='text-muted text-center' itemprop='jobTitle'>Full Stack Engineer | Developer</h5>
+                                <h5 class='text-muted text-center' itemprop='jobTitle'>Software Engineer</h5>
                             </div>
                         </span>
                         <hr>
@@ -150,7 +150,7 @@
                                 <div class='info'>
                                     <h4 class='title text-uppercase'>About</h4>
                                     <div class='content' itemprop='description'>
-                                        Hi! I&#x27;m Angela, a full stack developer. My degree offered me an extended career showcasing everything finance in my former life. Through making some pretty awesome spreadsheets and fancy formulas, I learned that coding was my passion and decided to pursue it full-time.  Numbers, readable code, well-written tests, and puppies tickle me pink. 
+                                        Hi! I&#x27;m Angela, a software engineer. My degree offered me an extended career showcasing everything finance in my former life. Through making some pretty awesome spreadsheets and fancy formulas, I learned that coding was my passion and decided to pursue it full-time.  Numbers, readable code, well-written tests, and puppies tickle me pink. 
                                     </div>
                                 </div>
                             </div>
