--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                             </div>
                             <div class='name-and-profession'>
                                 <h3 class='text-center text-bolder name' itemprop='name'>Angela Lo</h3>
-                                <h5 class='text-muted text-center' itemprop='jobTitle'>Software Engineer</h5>
+                                <h5 class='text-muted text-center' itemprop='jobTitle'>Full Stack Web Developer | Engineer</h5>
                             </div>
                         </span>
                         <hr>
@@ -150,7 +150,7 @@
                                 <div class='info'>
                                     <h4 class='title text-uppercase'>About</h4>
                                     <div class='content' itemprop='description'>
-                                        Hi! I&#x27;m Angela, a software engineer. My degree offered me an extended career showcasing everything finance in my former life. Through making some pretty awesome spreadsheets and fancy formulas, I learned that coding was my passion and decided to pursue it full-time.  Numbers, readable code, well-written tests, and puppies tickle me pink. 
+                                        Hi! I&#x27;m Angela, a fullstack web developer. My degree offered me an extended career showcasing everything finance in my former life. Through making some pretty awesome spreadsheets and fancy formulas, I learned that coding was my passion and decided to pursue it full-time.  Numbers, readable code, well-written tests, and puppies tickle me pink. 
                                     </div>
                                 </div>
                             </div>
@@ -245,7 +245,7 @@
                                     <ul class='list-unstyled'>
                                         <li class='card card-nested clearfix'>
                                             <div class='content'>
-                                                <p class='clear-margin relative'><strong>Software Engineer | Intern</strong>&nbsp;
+                                                <p class='clear-margin relative'><strong>Front End Developer | Intern</strong>&nbsp;
                                                 <a href='https://www.sumall.ai' target="_blank">Sumall</a></p>
                                                 <p class='text-muted'><small><span class='space-right'>August 2017 - Present</span><span><i class='fa fa-clock-o icon-left'></i>< 1 year</span></small></p>
                                                 <ul>
